--- a/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
@@ -10,6 +10,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 This is a complete online course for Java/Spring developers wanting to learn how
 Redis can serve as your primary database in Spring Applications and how to leverage the
 power of the many Redis Modules in a traditional Spring Microservices application.
