--- a/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
@@ -7,6 +7,9 @@ slug: /develop/java/redis-and-spring-course/lesson_1
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
+
 ### Objectives
 
 Create the skeleton for the course’s Spring Boot application, configuring all dependencies and launching a suitably configured Redis instance for the course.
