--- a/docs/develop/java/spring/redis-and-spring-course/lesson_3/index-lesson_3.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_3/index-lesson_3.mdx
@@ -7,6 +7,8 @@ slug: /develop/java/redis-and-spring-course/lesson_3
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 ### Objectives
 
 To configure a `RedisTemplate `and learn how to access different operation bundles to read and write data to Redis from a Spring REST controller.
