--- a/docs/develop/java/spring/redis-and-spring-course/lesson_4/index-lesson_4.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_4/index-lesson_4.mdx
@@ -7,6 +7,8 @@ slug: /develop/java/redis-and-spring-course/lesson_4
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 ### Objectives
 To finish creating the user-role domain, load and transform JSON data, and begin crafting the Redi2Read API.
 
