--- a/docs/develop/java/spring/redis-and-spring-course/lesson_6/index-lesson_6.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_6/index-lesson_6.mdx
@@ -7,6 +7,9 @@ slug: /develop/java/redis-and-spring-course/lesson_6
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 ### Objectives
 Add a JSON-backed domain model to Redi2Read using the RedisJSON Redis module.
 
