--- a/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
@@ -7,6 +7,8 @@ slug: /develop/java/redis-and-spring-course/lesson_8
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 ### Objectives
 Build a simple but powerful graph-based recommendation engine in the Redi2Read application.
 
