--- a/docs/develop/java/spring/redis-and-spring-course/lesson_9/index-lesson_9.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_9/index-lesson_9.mdx
@@ -10,6 +10,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 ### Objectives
 
 Learn how easy it is to use Redis as a cache in your Spring applications
