--- a/docs/develop/java/spring/getting-started.mdx
+++ b/docs/develop/java/spring/getting-started.mdx
@@ -9,6 +9,9 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
+
 #### Data-Driven Applications with Spring Boot and Redis
 
 Spring Boot is the most powerful and popular way to easily create stand-alone,
