--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-lua.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-lua.mdx
@@ -9,6 +9,8 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
 ## Improving atomicity and performance with Lua
 
 One way to improve our implementation is by moving the responsibility of
