--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive.mdx
@@ -9,6 +9,9 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
+
 ## A basic Spring Web Flux App
 
 Let's start by creating a simple Spring Boot application using the Spring Initializr:
