--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window.mdx
@@ -9,6 +9,9 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
+
 The simplest approach to build a rate limiter is the "fixed window" implementation in which we cap the
 maximum number of requests in a fixed window of time. For exmaple, if the window size is 1 hour, we can
 "fix" it at the top of the hour, like 12:00-12:59, 1:00-1:59, and so forth.
