--- a/docs/develop/java/spring/redis-and-spring-course/lesson_2/index-lesson_2.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_2/index-lesson_2.mdx
@@ -7,6 +7,9 @@ slug: /develop/java/redis-and-spring-course/lesson_2
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
+
 ### Objectives
 Configure a RedisTemplate and learn how to access different operation bundles to read and write data to and from Redis in a Spring REST controller.
 
