--- a/docs/develop/java/spring/redis-and-spring-course/lesson_5/index-lesson_5.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_5/index-lesson_5.mdx
@@ -7,6 +7,9 @@ slug: /develop/java/redis-and-spring-course/lesson_5
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+
+
 ### Objectives
 Create the Book-Category-Book-Ratings domain, load and transform JSON data, and implement the Books API.
 
