--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -10,6 +10,10 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
+
 RedisInsight is an intuitive and efficient GUI for Redis, allowing you to interact with your databases and manage your data—with built-in support for most popular Redis modules. It is a 100% free Redis GUI tool that allows you to visualise, monitor, and optimize while developing your applications with Redis
 
 ![my image](redisinsight.gif)
