--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -10,6 +10,9 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
+
 RedisInsight profiler analyzes your Redis commands that are being run on the Redis server in real-time. The tool provides you detailed  information about the number of commands processed, commands/second and number of connected clients. It also gives information about top prefixes, top keys and top commands. 
 
 It basically runs the Redis MONITOR command and generates a summarized view. MONITOR is a debugging command that streams back every command processed by the Redis server. It can help in understanding what is happening to the database. This command can both be used via `redis-cli` and via `telnet`.All the commands sent to the redis instance are monitored for the duration of the profiling. The ability to see all the requests processed by the server is useful in order to spot bugs in an application both when using Redis as a database and as a distributed caching system.
