--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -10,6 +10,10 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
+
+
 The Redis Data Source for Grafana is a plug-in that allows users to connect to the Redis database and build dashboards in Grafana to easily monitor Redis and application data. It provides an out-of-the-box predefined dashboard, but also lets you build customized dashboards tuned to your specific needs.
 
 ![my image](redis.png)
