--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -5,6 +5,8 @@ sidebar_label: Redis Anti-Patterns Every Developer Should Avoid
 slug: /howtos/antipatterns/
 ---
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
 ![antipattern](antipattern.png)
 
 Developers don’t just use Redis, they love it. [Stack Overflow’s annual Developer Survey 2021](https://insights.stackoverflow.com/survey/2021#technology-most-loved-dreaded-and-wanted) has ranked Redis as the Most Loved Database platform for the fifth years running! But it is equally important to understand that Redis defaults are not the best for everyone. Millions of developers uses Redis due to its speed and performance, however it is important to make sure that it is being used properly.
