--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -10,6 +10,8 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
 
 This simple container image bundles together the latest stable releases of Redis and select Redis modules from Redis Labs.
 This image is based on the official image of Redis from Docker. By default, the container starts with Redis' default configuration and all included modules loaded.
