--- a/docs/explore/riot/index-riot.mdx
+++ b/docs/explore/riot/index-riot.mdx
@@ -10,6 +10,7 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
 
 Redis Input/Output Tools (RIOT) is a set of import/export command line utilities for Redis:
 
