--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -9,28 +9,57 @@ Redis Enterprise Cloud on AWS is a fully Managed Redis Enterprise as a service. 
 
 Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
 
-### Step 1. Getting Started
+### Step 1. Create free cloud account
 
-Follow this [link to register](https://redislabs.com/try-free/) 
+Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![AWS Cloud](tryfree.png)
-
-### Step 2. Choose AWS Cloud
-
-For the cloud provider, select Amazon AWS and choose Free plan.
+![image](images/deployment.png)
 
 
-![AWS Cloud](aws3.png)
+### Step 2. Create Your subscription
+
+Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription". 
+
+![My Image](images/create_subscription.png)
 
 
-### Step 3. Create database
+### Step 3. Select the right Subscription Plan
 
-![AWS Cloud](aws4.png)
+Select "Fixed Plan" for low throughout application as for now.
 
-### Step 4. Click "Activate"
+![My Image](images/select_subscription.png)
 
-![AWS Cloud](aws6.png)
+### Step 4.  Select cloud vendor
+ 
+For the cloud provider, select your preferred cloud (for demo purpose)
 
+
+
+![My Image](images/select_cloud.png)
+
+### Step 5. Click "Create Subscription"
+
+Finally, click on "Create Subscription" button.
+
+![My Image](images/final_subscription.png)
+
+You can now verify the subscription as shown below:
+
+![My Image](images/Verify_subscription.png)
+
+### Step 6. Create database
+
+Click "Create Database". Enter database name and your preferred module.
+
+![My Image](images/create_database.png)
+
+
+
+### Step 7. Launch database
+
+Click "Activate" and wait for few seconds till it gets activated. Once fully activated, you will see the database endpoints as shown below:
+
+![My Image](images/launch_database.png)
 ### Next Step
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
