--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -35,7 +35,7 @@ You can quickly and easily get your apps up and running with Redis Enterprise Cl
 
 Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
-![heroku](rediscloud.png)
+![heroku](rediscloud_timeseries.png)
 
 Save the database endpoint URL and password for future reference.
 
