Added RedisGraph and Python

--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -36,7 +36,16 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisgraph/using-redisinsight"
         />
  </div>
+</div>
+<div class="row">
 
+ <div class="col">
+     <RedisCard
+        title="How to query Graph data using Python"
+        description="RedisGraph using Python"
+        page="/howtos/redisgraph/using-python"
+        />
+</div>
 
 
 
