--- a/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
+++ b/docs/howtos/redisgraph/explore-python-code/index-explorepythoncode.mdx
@@ -107,3 +107,10 @@ Functions called by the Docker Compose top level commands up and run
 
 - [Pycograph Project](https://pycograph.com/)
 - [Docker Compose Source Code](https://github.com/docker/compose)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
+
