--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -187,4 +187,9 @@ Click on the Execute button, and double click on the actors to follow the relati
 - Learn more about RedisGraph in the [Quickstart](https://oss.redislabs.com/redisgraph/?_ga=2.186887980.520518125.1606546041-1440690046.1604964523) tutorial.
 - [Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool](/explore/redisinsight/redisgraph)
 
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
 
