--- a/docs/howtos/redisgraph/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisgraph/using-python/index-usingpython.mdx
@@ -169,8 +169,14 @@ MATCH (n) RETURN n
 
 ### References
 
-### Next Step
 
 - [Building Movies database app using RedisGraph and NodeJS](/howtos/redisgraphmovies/)
 - Learn more about RedisGraph in the [Quickstart](https://oss.redislabs.com/redisgraph/?_ga=2.186887980.520518125.1606546041-1440690046.1604964523) tutorial.
 - [Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool](/explore/redisinsight/redisgraph)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
+
