Added RedisGraph using Ruby tutorial

--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -14,11 +14,11 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
-![RedisGraph](redisgraph1.png)
+![RedisGraph](deployment.png)
 
 ### Step 2. Create a database with RedisGraph Module
 
-![RedisGraph](redisgraph.png)
+![RedisGraph](rediscloud_redisgraph.png)
 
 
 ### Step 3. Connect to Redis database
