--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -47,6 +47,12 @@ The following links provides you with the available options to get started with 
         />
 </div>
 
-
+ <div class="col">
+     <RedisCard
+        title="How to query Graph data using Ruby"
+        description="RedisGraph using Ruby"
+        page="/howtos/redisgraph/using-ruby"
+        />
+</div>
 
 </div>
