--- a/docs/howtos/redisgraph/using-redisinsight/index-usingredisinsight.mdx
+++ b/docs/howtos/redisgraph/using-redisinsight/index-usingredisinsight.mdx
@@ -30,7 +30,7 @@ Follow the below steps to see how your data is connected via the RedisInsight Br
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](deployment.png)
 
 
 ## Step 2: Download RedisInsight
