Added RedisGraph using Ruby tutorial

--- a/docs/howtos/redisgraph/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisgraph/using-python/index-usingpython.mdx
@@ -96,7 +96,7 @@ Follow the steps below to get started with RedisGraph with Python:
   redis_graph.delete()
 ```
 
-### Step 5. Execute th Python Script
+### Step 5. Execute the Python Script
 
  ```python
    python3 test.py 
