Added LaunchPad under Rate Limiting app

--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -388,3 +388,11 @@ You can get permitted_requests_count with this command:
 - [Rate Limiting with Redis Webinar](https://redislabs.com/webinars-on-demand/rate-limiting-with-redis/)
 - [How to use Redis for real-time metering applications](https://www.infoworld.com/article/3230455/how-to-use-redis-for-real-time-metering-applications.html)
 - [redis-cell: a Rate Limiting Redis Module](https://redislabs.com/blog/redis-cell-rate-limiting-redis-module/)
+
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
+
