Fixed the formatting

--- a/docs/howtos/redisgraph/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisgraph/using-ruby/index-usingruby.mdx
@@ -38,7 +38,8 @@ Follow the steps below to get started with RedisGraph with Ruby:
 
  ```
 
-### Step 4 Install the prerequisites
+### Step 4. Install the prerequisites
+
 
 To ensure prerequisites are installed, run the following: bundle install
 
@@ -72,7 +73,7 @@ Copy the below sample code and save it in a file "test.rb"
   response.print_resultset
  ```
 
-### Step 5. Execute the Ruby code
+### Step 6. Execute the Ruby code
 
  ```bash
    ruby test.rb 
@@ -81,7 +82,7 @@ Copy the below sample code and save it in a file "test.rb"
 
 
 
-### Step 6. Monitor the Graph query
+### Step 7. Monitor the Graph query
 
 
 ```bash
