--- a/docs/howtos/caching/index-caching.mdx
+++ b/docs/howtos/caching/index-caching.mdx
@@ -10,6 +10,9 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
+
 ![My Image](cachingapp.png)
 
 This app returns the number of repositories a Github account has. When you first search for an account, the server calls Github's API to return the response. This can take some time. The server then adds the details of this slow response to Redis for future requests. When you search again, the next response comes directly from Redis cache instead of calling Github. The responses become much faster.
