--- a/docs/howtos/herokunodejs/index-herokunodejs.mdx
+++ b/docs/howtos/herokunodejs/index-herokunodejs.mdx
@@ -7,7 +7,7 @@ slug: /howtos/herokunodejs
 
 import RedisCard from '@site/src/theme/RedisCard';
 
-
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
 
 ### Step 1. Create Redis Enterprise Cloud
 
