--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -5,6 +5,8 @@ sidebar_label: RedisBloom Tutorial
 slug: /howtos/redisbloom
 ---
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
 RedisBloom extends Redis core to support additional probabilistic data structures. It allows for solving computer science problems in a constant memory space with extremely fast processing and a low error rate. It supports scalable Bloom and Cuckoo filters to determine (with a specified degree of certainty) whether an item is present or absent from a collection. 
  
 The RedisBloom module provides four data types:
