--- a/docs/howtos/herokupython/index-herokupython.mdx
+++ b/docs/howtos/herokupython/index-herokupython.mdx
@@ -7,6 +7,8 @@ slug: /howtos/herokupython
 
 import RedisCard from '@site/src/theme/RedisCard';
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
 
 ### Step 1. Create Redis Enterprise Cloud
 
