--- a/docs/howtos/redisgears/index-redisgears.mdx
+++ b/docs/howtos/redisgears/index-redisgears.mdx
@@ -5,7 +5,7 @@ sidebar_label: RedisGears Tutorial
 slug: /howtos/redisgears
 ---
 
-
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
 
 [RedisGears](https://redis.com/modules/redis-gears/) is an engine for data processing in Redis. RedisGears supports batch and event-driven processing for Redis data. To use RedisGears, you write functions that describe how your data should be processed. You then submit this code to your Redis deployment for remote execution.
 
