--- a/docs/howtos/redistimeseries/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/index-redistimeseries.mdx
@@ -5,6 +5,8 @@ sidebar_label: RedisTimeSeries Tutorial
 slug: /howtos/redistimeseries
 ---
 
+Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
+
 [RedisTimeseries](https://redis.com/modules/redis-timeseries/) is a Redis module developed by Redis Labs to enhance your experience managing time-series data with Redis. It simplifies the use of Redis for time-series use cases such as internet of things (IoT) data, stock prices, and telemetry. With RedisTimeSeries, you can ingest and query millions of samples and events at the speed of Redis. Advanced tooling such as downsampling and aggregation ensure a small memory footprint without impacting performance. Use a variety of queries for visualization and monitoring with built-in connectors to popular monitoring tools like Grafana, Prometheus, and Telegraf.
 
 <div class="text--center">
