--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -131,10 +131,10 @@ A complete introduction to Redis for Python developers.
 
 ### References
 
-- [Storing JSON document in Redis using Python](https://developer.redislabs.com/howtos/redisjson/storing-json-document#redisjson-python-client)
-- [Python based application on Heroku using Redis](https://developer.redislabs.com/howtos/herokupython/)
-- [How to build a Rate Limiter using Redis](https://developer.redislabs.com/howtos/ratelimiting/)
-- [Writing Your Serverless function using RedisGears Browser Tool](https://developer.redislabs.com/explore/redisinsight/redisgears/)
+- [How to cache JSON data in Redis with Python](/howtos/redisjson/using-python)
+- [Python based application on Heroku using Redis](/howtos/herokupython/)
+- [How to build a Rate Limiter using Redis](/howtos/ratelimiting/)
+- [Writing Your Serverless function using RedisGears Browser Tool](/explore/redisinsight/redisgears/)
 
 ##
 
