--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -26,7 +26,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON and Python"
-        description="How to cache JSON data in Redis with Python"
+        description="How to store JSON documents in Redis with Python"
         page="/howtos/redisjson/using-python"
         />
  </div>
