--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -131,7 +131,7 @@ A complete introduction to Redis for Python developers.
 
 ### References
 
-- [How to cache JSON data in Redis with Python](/howtos/redisjson/using-python)
+- [How to store JSON documents in Redis with Python](/howtos/redisjson/using-python)
 - [Python based application on Heroku using Redis](/howtos/herokupython/)
 - [How to build a Rate Limiter using Redis](/howtos/ratelimiting/)
 - [Writing Your Serverless function using RedisGears Browser Tool](/explore/redisinsight/redisgears/)
