--- a/docs/howtos/herokujava/index-herokujava.mdx
+++ b/docs/howtos/herokujava/index-herokujava.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-herokujava
-title: Java based application on Heroku using Redis 
-sidebar_label: How to build Java based application on Heroku using Redis
+title: How to build a Java based application on Heroku using Redis 
+sidebar_label: How to build a Java based application on Heroku using Redis
 slug: /howtos/herokujava
 ---
 
