--- a/docs/howtos/herokupython/index-herokupython.mdx
+++ b/docs/howtos/herokupython/index-herokupython.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-herokupython
-title: Python based application on Heroku using Redis
-sidebar_label: How to build Python based application on Heroku using Redis
+title: How to build a Python based application on Heroku using Redis
+sidebar_label: How to build a Python based application on Heroku using Redis
 slug: /howtos/herokupython
 ---
 
