--- a/docs/howtos/herokunodejs/index-herokunodejs.mdx
+++ b/docs/howtos/herokunodejs/index-herokunodejs.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-herokunodejs
-title: NodeJS based application on Heroku using Redis
-sidebar_label: How to build NodeJS based application on Heroku using Redis 
+title: How to build a NodeJS based application on Heroku using Redis
+sidebar_label: How to build a NodeJS based application on Heroku using Redis 
 slug: /howtos/herokunodejs
 ---
 
