--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -55,4 +55,13 @@ The following links provides you with the available options to get started with 
         />
 </div>
 
+ <div class="col">
+     <RedisCard
+        title="How to query Graph data using JavaScript"
+        description="RedisGraph using JavaScript"
+        page="/howtos/redisgraph/using-javascript"
+        />
+</div>
+
+
 </div>
