Updated phrasing on the other pages where it occurs.

--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -90,7 +90,7 @@ Application that shows how to do rate limiting using various Redis datastructure
 ###  Redis Launchpad
 
 Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redis.com)
+Check out a few of these apps below, or [click here to access the complete list](https://launchpad.redis.com).
 
 <div class="row text--center">
 
