--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -206,7 +206,7 @@ By now, the Go application should successfully connect to the Redis instance and
 ###  Redis Launchpad
 
 Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redislabs.com)
+Check out a few of these apps below, or [click here to access the complete list](https://launchpad.redis.com).
 
 <div class="row text--center">
 
