Added Redis Explorer

--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -32,6 +32,17 @@ The following links provides you with the available options to explore a new Red
         />
  </div>
 
+ <div class="col">
+    <RedisCard
+        title="Redis Explorer Plugin for Grafana"
+        description="How to Build Grafana Dashboard for Redis Enterprise cluster  in 5 Minutes"
+        page="/explore/redisexplorer"
+        />
+ </div>
+
+</div>
+
+<div class="row">
 
  <div class="col">
     <RedisCard 
@@ -40,6 +51,9 @@ The following links provides you with the available options to explore a new Red
         page="/explore/riot"
         />
  </div>
+
+ 
+ 
 </div>
 
 
