--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -13,6 +13,7 @@ The RedisJSON module provides in-memory manipulation of JSON documents at high v
 
 Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
+![My Image](tryfree.png)
 ![image](deployment.png)
 
 
