--- a/docs/create/rediscloud/index-recloud.mdx
+++ b/docs/create/rediscloud/index-recloud.mdx
@@ -11,6 +11,8 @@ Redis Enterprise Cloud is a fully managed cloud service by Redis Labs.Built for 
 
 Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
+![My Image](tryfree.png)
+
 ![image](images/deployment.png)
 
 
