--- a/docs/explore/redisexplorer/index-redisexplorer.mdx
+++ b/docs/explore/redisexplorer/index-redisexplorer.mdx
@@ -15,7 +15,7 @@ Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
 
 Redis Enterprise clusters are a set of nodes, typically two or more, providing database services. Clusters are inherently multi-tenant, and a single cluster can manage multiple databases accessed through individual endpoints. Redis Enterprise software provides REST API to retrieve information about cluster, database , nodes and metrics.
 
-Redis Explorer plugin is the latest plugin in the Redis Grafana daily that adds support for Redis Enterprise software.It is a plugin for Grafana that connects to Redis Enterprise software clusters using REST API. It provides application pages to add Redis Data Sources for managed databases and dashboards to see cluster configuration.
+Redis Explorer plugin is the latest plugin in the Grafana Labs that adds support for Redis Enterprise software.It is a plugin for Grafana that connects to Redis Enterprise software clusters using REST API. It provides application pages to add Redis Data Sources for managed databases and dashboards to see cluster configuration.
 
 
 ![my image](redisexplorer.png)
