--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -35,7 +35,7 @@ The following links provides you with the available options to explore a new Red
  <div class="col">
     <RedisCard
         title="Redis Explorer Plugin for Grafana"
-        description="How to Build Grafana Dashboard for Redis Enterprise cluster  in 5 Minutes"
+        description="How to Build Grafana Dashboards for Redis Enterprise cluster  in 5 Minutes"
         page="/explore/redisexplorer"
         />
  </div>
