--- a/docs/explore/redisexplorer/index-redisexplorer.mdx
+++ b/docs/explore/redisexplorer/index-redisexplorer.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisexplorer
-title: How to Build Grafana Dashboards for Redis Enterprise cluster  in 5 Minutes
-sidebar_label: How to Build Grafana Dashboards for Redis Enterprise Cluster using Redis Explorer
+title: How to create Grafana Dashboards for Redis Enterprise cluster  in 5 Minutes
+sidebar_label: How to create Grafana Dashboards for Redis Enterprise Cluster using Redis Explorer
 slug: /explore/redisexplorer
 ---
 
