--- a/docs/explore/redisexplorer/index-redisexplorer.mdx
+++ b/docs/explore/redisexplorer/index-redisexplorer.mdx
@@ -100,19 +100,18 @@ Open https://IP:3000 to access grafana. The default username/password is admin/a
 
 ![My Image](grafana.png)
 
-### Step 6. Add Redis Datasource
 
-![My Image](datasource.png)
+### Step 6. Choose Redis Explorer in the sidebar
 
-### Step 7. Choose Redis Explorer in the sidebar
+Once you add the datasource, you should be able to choose the right option
 
 ![My Image](explorer_options.png)
 
-### Step 8. Getting the Redis Enterprise Cluster Overview
+### Step 7. Getting the Redis Enterprise Cluster Overview
 
 ![My Image](cluster_overview.png)
 
-### Step 9. Displaying the Redis Enterprise Cluster Nodes
+### Step 8. Displaying the Redis Enterprise Cluster Nodes
 
 ![My Image](cluster_nodes.png)
 
