--- a/docs/explore/redisexplorer/index-redisexplorer.mdx
+++ b/docs/explore/redisexplorer/index-redisexplorer.mdx
@@ -63,6 +63,7 @@ Cluster Databases dashboard provides information and metrics for each databases 
 
 [Follow these steps](/create/docker/) to setup Redis Enterprise cluster nodes
 
+![My Image](tryfree1.png)
 
 ![My Image](redis_enterprise_cluster.png)
 
