--- a/docs/create/cloud/rediscloud/index-recloud.mdx
+++ b/docs/create/cloud/rediscloud/index-recloud.mdx
@@ -9,36 +9,69 @@ Redis Enterprise Cloud is a fully managed cloud service by Redis Labs.Built for 
 
 
 ### Step 1. Create free cloud account
+
 Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-### Step 2. Add subscription
-Next, you will have to add  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click Subscriptions. At the bottom of the page, click the “+” sign.
+![My Image](tryfree.png)
 
-![My Image](images/subscription.png)
-
-### Step 3.  Select cloud provider
-For the cloud provider, select Microsoft Azure and Fixed Size Plan(for demo purpose)
+![image](images/deployment.png)
 
 
+### Step 2. Create Your subscription
 
-![My Image](images/recloud1.png)
+Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription". 
 
-### Step 4. Create database
-Click Create. After you create a subscription, you can create a database:
-
-![My Image](images/recloud2.png)
+![My Image](images/create_subscription.png)
 
 
+### Step 3. Select the right Subscription Plan
 
-### Step 5. Launch database
+Select "Fixed Plan" for low throughout application as for now.
+
+![My Image](images/select_subscription.png)
+
+### Step 4.  Select cloud vendor
+ 
+For the cloud provider, select your preferred cloud (for demo purpose)
+
+
+
+![My Image](images/select_cloud.png)
+
+### Step 5. Click "Create Subscription"
+
+Finally, click on "Create Subscription" button.
+
+![My Image](images/final_subscription.png)
+
+You can now verify the subscription as shown below:
+
+![My Image](images/Verify_subscription.png)
+
+### Step 6. Create database
+
+Click "Create Database". Enter database name and your preferred module.
+
+![My Image](images/create_database.png)
+
+
+
+### Step 7. Launch database
+
 Click "Activate" and wait for few seconds till it gets activated. Once fully activated, you will see the database endpoints as shown below:
 
-![My Image](images/recloud3.png)
+![My Image](images/launch_database.png)
 
 
 ### Next Step
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
 
 
