--- a/docs/howtos/redisearch/index-redisearch.mdx
+++ b/docs/howtos/redisearch/index-redisearch.mdx
@@ -17,6 +17,7 @@ RediSearch also supports auto-completion with fuzzy prefix matching, and atomic 
 
 Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
+![Redisearch](tryfree.png)
 ![Redisearch](redisearch3.png)
 
 ### Step 2. Create a database with Redisearch Module
