--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -14,6 +14,7 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
+![RedisGraph](tryfree.png)
 ![RedisGraph](deployment.png)
 
 ### Step 2. Create a database with RedisGraph Module
