--- a/docs/howtos/redistimeseries/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/index-redistimeseries.mdx
@@ -17,6 +17,7 @@ Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
 
 Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
+![Redistimeseries](tryfree.png)
 ![Redistimeseries](redistimeseries.png)
 
 ### Step 2. Create a database with RedisTimeSeries Module
