--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-fixed-window
-title: Fixed Window Rate Limiting
+title: How to Implement Fixed Window Rate Limiting using Redis
 sidebar_label: Overview
 slug: /develop/java/spring/rate-limiting/fixed-window
 ---
