Adds the What Is Hacktoberfest? section.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -1,15 +1,18 @@
 ---
 id: index-hacktoberfest
-title: Hacktoberfest 2021
-sidebar_label: Hacktoberfest
+title: Hacktoberfest 2021 at Redis
+sidebar_label: Hacktoberfest 2021
 slug: /hacktoberfest/
 ---
 
 ![Hacktoberfest Logo](images/hacktoberfest-logo.png)
 
-## Introduction
+## What is Hacktoberfest?
 
-Here's a test video embed...
+[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long festival which takes place every year in October.  It is sponsored by DigitalOcean and aims to encourage people to get involved in open source projects.
+
+
+Here's a test video embed to see what it looks like...
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xdROBvMb4LE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
