Adds the How To Get Involved section.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -16,11 +16,22 @@ Here's a test video embed to see what it looks like...
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xdROBvMb4LE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## Level 2 Title
+## How to get involved
 
-This is a level 2 title and here's [a link](https://redis.io).
+We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  You can find them at "links".
 
-### Level 3 Title
+### Finding and working on an issue
+
+1. Find a suitable issue using the links above.  Where possible, we have tagged them according to the level of experience required.
+
+2. Read the guidance notes on each issue carefully so you know what's expected of you.
+
+3. Assign the issue to yourself "screen grab".
+
+4. Open a pull request within two calendar days.  This is to give more people a fair chance at finding an unassigned issue.
+
+5. We will review your pull request and merge it if it's suitable.
+
 
 This is a level 3 title
 
