Adds the section on getting GitHub and Hacktoberfest accounts.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -20,6 +20,12 @@ Here's a test video embed to see what it looks like...
 
 We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  You can find them at "links".
 
+### Get a GitHub account and Hacktoberfest account
+
+You'll need a GitHub account to contribute to our repos.  Get a free account at [GitHub.com](github.com).
+
+You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalocean.com/register) (you can do this using your GitHub account) if you want to be in with a chance of [earning swag from DigitalOcean](https://hacktoberfest.digitalocean.com/resources/participation).  Please note that Redis is not involved in the allocation or sending of swag.
+
 ### Finding and working on an issue
 
 1. Find a suitable issue using the links above.  Where possible, we have tagged them according to the level of experience required.
@@ -32,6 +38,7 @@ We've created a number of GitHub issues for folks who want to contribute to our 
 
 5. We will review your pull request and merge it if it's suitable.
 
+### 
 
 This is a level 3 title
 
