Added RedisGraph Go Client

--- a/docs/howtos/redisgraph/using-javascript/index-usingjavascript.mdx
+++ b/docs/howtos/redisgraph/using-javascript/index-usingjavascript.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingjavascript
-title: How to query Graph data in Redis with JavaScript
+title: How to query Graph data in Redis using JavaScript
 sidebar_label: RedisGraph and JavaScript
 slug: /howtos/redisgraph/using-javascript
 ---
