--- a/docs/howtos/redisgraph/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisgraph/using-python/index-usingpython.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingpython
-title: How to query Graph data in Redis with Python
+title: How to query Graph data in Redis using Python
 sidebar_label: RedisGraph and Python
 slug: /howtos/redisgraph/using-python
 ---
