--- a/docs/howtos/redisgraph/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisgraph/using-ruby/index-usingruby.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingruby
-title: How to query Graph data in Redis with Ruby
+title: How to query Graph data in Redis using Ruby
 sidebar_label: RedisGraph and Ruby
 slug: /howtos/redisgraph/using-ruby
 ---
