--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -31,7 +31,7 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
     <RedisCard
-        title="How to visualize Graph data using RedisInsight"
+        title="How to visualize Graph data in Redis using RedisInsight"
         description="RedisGraph using RedisInsight"
         page="/howtos/redisgraph/using-redisinsight"
         />
@@ -41,7 +41,7 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
      <RedisCard
-        title="How to query Graph data using Python"
+        title="How to query Graph data in Redis using Python"
         description="RedisGraph using Python"
         page="/howtos/redisgraph/using-python"
         />
@@ -49,7 +49,7 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
      <RedisCard
-        title="How to query Graph data using Ruby"
+        title="How to query Graph data in Redis using Ruby"
         description="RedisGraph using Ruby"
         page="/howtos/redisgraph/using-ruby"
         />
@@ -57,11 +57,20 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
      <RedisCard
-        title="How to query Graph data using JavaScript"
+        title="How to query Graph data in Redis using JavaScript"
         description="RedisGraph using JavaScript"
         page="/howtos/redisgraph/using-javascript"
         />
 </div>
+</div>
+<div class="row">
 
+ <div class="col">
+     <RedisCard
+        title="How to query Graph data in Redis using Go"
+        description="RedisGraph using Go"
+        page="/howtos/redisgraph/using-go"
+        />
+</div>
 
 </div>
